--- a/style.css
+++ b/style.css
@@ -1,84 +1,78 @@
-body {
-  font-family: "Avenir Next";
-}
-
-li {
-  list-style: none;
-}
-
-.header {
-  background-color: black;
-  color: #fff;
-  width: 100%;
-  height:15%;
-
-}
-
-.header-logo {
-  float: left;
-  font-size: 3.7em;
-  font-weight:bold;
-  padding: 15px 40px;
-  color:white;
-}
-
-.header-list li {
-  float: left;
-  padding: 35px 190px 10px;
-  color:white;
-  font-size: 2.1875em; /* 40px/16=2.5em */
-  font-weight:bold;
-}
-
-
-.main {
+.raid {
   
-  background-color:#696969;
-  height: auto;
-  width:100%;
+  font-size:3vw;
+  padding: 20px;
+}
+
+
+.pvp {
+  
+  font-size:3vw;
  
+}
+
+
+.survive {
+  
+  font-size:3vw;
   
 }
 
-.sieg{
-  height:5%;
-  width:5%;
-  padding-top:8px;
-  padding-left:120px;
+/* w3 slideshow class */
+.mySlides {display:none}
+
+
+h4 {
+  text-align: center;
+  font-size:3vw;
+  font-family: 'Luckiest Guy', cursive;
+  
+}
+
+h3 {
+  
+  text-align:center;
   
 }
 
 
-
-
-.footer-logo {
-  float: left;
-  font-size: 32px;
+p {
+  
+  text-align: left; /* centred is hard to read so made left aligned because Mr Harrison said so */
+  
+   /*   /* talking Jack .... 1 vw makes it too hard to read */
+  font-size: 1em;
+  
+  /* dont want fixed sizes, needs to be resposive
+  margin-left:110px;
+  margin-right:110px;
+  */
+  margin-left:25%;
+  margin-right:25%;
+  padding-bottom:3%;
 }
 
-.middle p {
-  color:white;
-  font-size:70px;
-  padding:50px 0px 0px 0px;
-  font-family: 'Archivo Black', sans-serif;
-  font-weight:900;
+.main-container80 {
+  margin: auto;
+  width: 100%;
   
 }
 
-.middle {
-position: absolute;
-padding-left:60px;
-
+.empty{
+  
+  padding-bottom:3%;
   
 }
 
-.body p {
-  position:absolute;
-  padding-left:30px;
-  padding-right:30px;
-  padding-top:700px;
-  color:white;
-  font-family: 'Play', sans-serif;
-  font-size:25px;
+.empty2{
+  
+  padding-bottom:3%;
+  
+}
+
+
+.aboutparagraph2 {
+  
+  padding-top :3%;
   
 }
